# pyprince

./: .gitignore  ReleaseProcess.md  build_npm_package.py  build_package.py  build_pyz.py  pyproject.toml
npm-package/: index.d.ts  index.js  package.json
pyprince/: __init__.py  __main__.py  generators.py  logger.py  main.py  serializer.py
pyprince/parser/: ImportResolver.py  Project.py  __init__.py  constants.py  import_handler.py  module_finder.py  package_finder.py  project.py  project_cache.py  project_importer.py  project_parser.py  utils.py
pyprince/transformators/: FunctionExpander.py  NodeReplacer.py  Transformator.py  VariableReplacer.py  __init__.py
pyprince/utils/: __init__.py  error.py  logging.py  serializer.py
tests/: test_code_generator.py  test_describe_module_dependency.py  test_import_resolver.py  test_standard_lib_import.py  testutils.py
tests/integration_tests/: test_standard_lib_import.py
tests/test_scenarios/exmp00_no_imports/: main.py
tests/test_scenarios/exmp01_import_modules/: main.py  utils.py
tests/test_scenarios/exmp02_relative_imports/: main.py
tests/test_scenarios/exmp02_relative_imports/utils/: __init__.py  other.py  printer.py
tests/test_scenarios/exmp03_local_func/: main.py
tests/testutils/: PackageGenerator.py  PyPrinceTestCase.py  __init__.py  test_utils.py
tests/testutils/matchers/: __init__.py  all_unique.py
tests/unittests/: test_code_generator.py  test_describe_module_dependency.py  test_import_resolver.py  test_project_cache_serialization.py  test_project_parser.py
