[tool.poetry]
name = "pyprince"
version = "0.0.2"
description = ""
authors = ["HMate <mhidvegi@gmail.com>"]

[tool.poetry.scripts]
pyprince = 'pyprince:console_entry_main'

[tool.poetry.dependencies]
python = "^3.9"
libcst = "^0.4.0"
typer = "^0.3.2"
fs = "^2.4.13"
orjson = "^3.6.3"

[tool.poetry.group.dev.dependencies]
black = { version = "^20.8b1", allow-prereleases = true }
pytest = "^6.2.3"
pylint = "^2.8.3"
shiv = "^1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120