[tool.poetry]
name = "pyprince"
version = "0.0.5"
description = ""
authors = ["HMate <mhidvegi@gmail.com>"]

[tool.poetry.scripts]
pyprince = 'pyprince:console_entry_main'

[tool.poetry.dependencies]
python = "^3.9"
libcst = "^1.0.1"
typer = "^0.3.2"
fs = "^2.4.13"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = { version = "^20.8b1", allow-prereleases = true }
pytest = "^7.4"
pylint = "^2.8.3"
shiv = "^1.0.3"
pyhamcrest = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "--capture=no --color=yes"
testpaths = ["tests"]

[tool.pyright]
# Docs: https://github.com/microsoft/pyright/blob/main/docs/configuration.md#type-check-rule-overrides
include = ["pyprince", "tests"]
exclude = [".mypy_cache", ".pytest_cache", "tests/test_scenarios/**"]

pythonVersion = "3.9"
pythonPlatform = "All"

executionEnvironments = [
    { root = "tests", reportOptionalMemberAccess = "none", reportCallIssue = "none", reportArgumentType = "none" },
    { root = "src" },
]
